cmake_minimum_required(VERSION 3.28)
project(module_examples)

add_subdirectory(hello_world)
add_subdirectory(unit_example_1)
add_subdirectory(unit_example_2)
add_subdirectory(interface_example_1)
add_subdirectory(interface_example_5)
# add_subdirectory(import_example_3)
add_subdirectory(gmf_example_2)
add_subdirectory(pmf_example_1)
add_subdirectory(context_example_1)
add_subdirectory(reach_example_1)
add_subdirectory(reach_example_2)
